tests/compile-fail/duplicate_word_accross_variants.stderr
error: Duplicate field `word`
 --> tests/compile-fail/duplicate_word_accross_variants.rs:7:15
  |
7 |     #[darling(word)]
  |               ^^^^
